# infolang-pydantic-ai

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
examples/: quickstart.py
src/infolang_pydantic_ai/: __init__.py  deps.py  models.py  tools.py
tests/: conftest.py  test_agent_integration.py  test_deps.py  test_live_smoke.py  test_models.py  test_tools.py  test_toolset.py
