[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infolang-pydantic-ai"
dynamic = ["version"]
description = "InfoLang semantic-memory tools and dependency injection for Pydantic AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "InfoLang", email = "engineering@infolang.ai" }]
keywords = ["infolang", "pydantic-ai", "memory", "semantic-memory", "agents", "rag", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "infolang>=0.2,<0.3",
  "pydantic-ai-slim>=1.0",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://infolang.ai"
Documentation = "https://docs.infolang.ai"
Source = "https://github.com/InfoLang-Inc/infolang-pydantic-ai"
Issues = "https://github.com/InfoLang-Inc/infolang-pydantic-ai/issues"

[tool.hatch.version]
path = "src/infolang_pydantic_ai/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/infolang_pydantic_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=infolang_pydantic_ai --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/infolang_pydantic_ai"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/infolang_pydantic_ai"]
